Fix alignment of underbar on windows.

--- a/stylus/common/utilities.styl
+++ b/stylus/common/utilities.styl
@@ -25,6 +25,7 @@ hr.underbar
 	margin-left: 0
 	margin-right: 0
 	display: none
+	text-align: left
 
 	@media $media-sm-up
 		display: block
